# memi

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  README.md  action.yml  glama.json  llms.txt  package-lock.json  package.json  server.json  vitest.config.ts
.claude-plugin/: marketplace.json
.memoire/: baseline.json
agent-kits/: manifest.json
apps/studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/studio/src-tauri/src/: lib.rs  studio.rs
docker/: Dockerfile.binary
docs/: AGENT_RECIPES.md  AGENT_STACKS.md  CI_RECIPES.md  CODEX_PLUGIN.md  DEMOS.md  DESIGN_SYSTEMS_MCP_INTEROP.md  FOCUSED_SKILL_REPOS.md  GITHUB_ACHIEVEMENTS.md  GITHUB_ACTION_MARKETPLACE.md  GROWTH_TO_1M_NPM.md  HANDOFF_PUBLIC_SURFACES_2026-07-14.md  INTERFACE_UNDERSTANDING.md  IOS_SWIFT.md  LAUNCH.md  LAUNCH_0_14_1.md  MARKETPLACE_LAUNCH.md  METRICS.md  OFFICIAL_MCP_REGISTRY.md  PRIVATE_REGISTRY.md  PRODUCT_HUNT_V2_5_COPY.md  PUBLIC_REPOS.md  README.md  RELEASE_GATES.md  SEO.md  SITE_HANDOFF.md  SOCIAL.md  STARSTRUCK.md  STUDIO_EXECUTE_CODE.md  STUDIO_MACOS_RELEASE.md  STUDIO_NEW_ENGINE.md  SUBMISSIONS.md  TEAM_ROLLOUT.md  V0_WORKFLOWS.md  V2_PACKAGE_POSITIONING.md
mcpb/: manifest.json
plugin/: code.js  ui.html  widget-meta.json
preview/: changelog.html
product-hunt-assets/: README.md  compose_product_hunt_assets.py  compose_product_hunt_assets_clean.py
scripts/: bench-cli.mjs  build-community-notes-catalog.mjs  build-notes-catalog.mjs  build-plugin.mjs  build-site-bundle.mjs  build-studio-runtime.mjs  build.mjs  check-community-notes.mjs  check-public-release-gate.mjs  (+15 more)
(+709 files in other folders)
