[package]
name = "memoire-studio"
version = "0.16.1"
description = "Mémoire Studio desktop agent design shell"
authors = ["Sarvesh Chidambaram"]
edition = "2021"

[lib]
name = "memoire_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.9.5", features = [] }

[features]
default = []
