[package]
name = "memoire-studio"
version = "0.17.0"
description = "Mémoire Studio desktop agent design shell"
authors = ["Sarvesh Chidambaram"]
edition = "2021"

[lib]
name = "memoire_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-dialog = "2.7.1"

[features]
default = []
